kubernetes/calico-metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: calico-node-metrics
  namespace: calico-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9091"
spec:
  clusterIP: None
  selector:
    k8s-app: calico-node
  ports:
    - name: metrics
      port: 9091
      targetPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: calico-typha-metrics
  namespace: calico-system
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9093"
spec:
  selector:
    k8s-app: calico-typha
  ports:
    - name: metrics
      port: 9093
      targetPort: 9093
